--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="contents.txt">contents</a>
     <a href="registration.txt">registration</a>
+    <a href="vector.txt">VECTOR</a>
 </body>
 </html>
