--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="contents.txt">contents</a>
-    <a href="registration.txt">registration</a>
+    <a href="DAA61.txt">1</a>
+    <a href="DAA62.txt">2</a>
     <a href="vector.txt">VECTOR</a>
     <a href="tcp.txt">VECTOR</a>
 </body>
