--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="DAA61.txt">1</a>
-    <a href="DAA62.txt">2</a>
-    <a href="vector.txt">VECTOR</a>
-    <a href="tcp.txt">VECTOR</a>
+    <a href="Daaint2.txt">1</a>
+    <a href="daaint21.txt">2</a>
 </body>
 </html>
