--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <a href="Daaint2.txt">1</a>
     <a href="Daaint1.txt">2</a>
+    <a href="daahcp.txt">3</a>
+    <a href="daaquick.txt">4</a>
 </body>
 </html>
