--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="Daaint1.txt">2</a>
     <a href="daahcp.txt">3</a>
     <a href="daaquick.txt">4</a>
+    <a href="nani1.txt">nani1</a>
+    <a href="nani2.txt">nani2</a>
 </body>
 </html>
